fix conflicts