@@ -54,8 +54,6 @@ import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
@@ -68,7 +66,6 @@ import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.util.Collections.singletonList;
 import static org.apache.kafka.raft.RaftClientTestContext.Builder.DEFAULT_ELECTION_TIMEOUT_MS;
 import static org.apache.kafka.raft.RaftProtocol.KIP_595_PROTOCOL;
 import static org.apache.kafka.raft.RaftProtocol.KIP_853_PROTOCOL;
@@ -96,7 +93,7 @@ public class KafkaRaftClientTest {
     @EnumSource(value = RaftProtocol.class)
     public void testInitializeSingleMemberQuorum(RaftProtocol raftProtocol) throws IOException {
         int localId = randomReplicaId();
-        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Collections.singleton(localId))
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Set.of(localId))
             .withRaftProtocol(raftProtocol)
             .build();
         context.assertElectedLeader(1, localId);
@@ -109,7 +106,7 @@ public class KafkaRaftClientTest {
         // Start off as leader. We should still bump the epoch after initialization
         int localId = randomReplicaId();
         int initialEpoch = 2;
-        Set<Integer> voters = Collections.singleton(localId);
+        Set<Integer> voters = Set.of(localId);
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withRaftProtocol(raftProtocol)
             .withElectedLeader(initialEpoch, localId)
@@ -360,7 +357,7 @@ public class KafkaRaftClientTest {
         assertEquals(0L, context.log.endOffset().offset());
         context.assertElectedLeader(epoch, localId);
         context.client.poll();
-        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch, Arrays.asList("a", "b")));
+        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch, List.of("a", "b")));
 
         context.pollUntilRequest();
         RaftRequest.Outbound request = context.assertSentEndQuorumEpochRequest(epoch, remoteId);
@@ -393,7 +390,7 @@ public class KafkaRaftClientTest {
             .withRaftProtocol(raftProtocol)
             .build();
 
-        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch, Arrays.asList("a", "b")));
+        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch, List.of("a", "b")));
     }
 
     @ParameterizedTest
@@ -419,7 +416,7 @@ public class KafkaRaftClientTest {
         assertEquals(OptionalInt.of(localId), context.currentLeader());
         int epoch = context.currentEpoch();
 
-        assertThrows(BufferAllocationException.class, () -> context.client.prepareAppend(epoch, singletonList("a")));
+        assertThrows(BufferAllocationException.class, () -> context.client.prepareAppend(epoch, List.of("a")));
         Mockito.verify(memoryPool).release(buffer);
     }
 
@@ -439,9 +436,9 @@ public class KafkaRaftClientTest {
         int epoch = context.currentEpoch();
 
         // Throws IllegalArgumentException on higher epoch
-        assertThrows(IllegalArgumentException.class, () -> context.client.prepareAppend(epoch + 1, singletonList("a")));
+        assertThrows(IllegalArgumentException.class, () -> context.client.prepareAppend(epoch + 1, List.of("a")));
         // Throws NotLeaderException on smaller epoch
-        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch - 1, singletonList("a")));
+        assertThrows(NotLeaderException.class, () -> context.client.prepareAppend(epoch - 1, List.of("a")));
     }
 
     @ParameterizedTest
@@ -504,7 +501,7 @@ public class KafkaRaftClientTest {
             context.endEpochResponse(epoch, OptionalInt.of(localId))
         );
         context.client.poll();
-        assertEquals(Collections.emptyList(), context.channel.drainSendQueue());
+        assertEquals(List.of(), context.channel.drainSendQueue());
 
         // Now sleep for the request timeout and verify that we get only one
         // retried request from the voter that hasn't responded yet.
@@ -538,7 +535,7 @@ public class KafkaRaftClientTest {
 
         // append some record, but the fetch in purgatory will still fail
         context.log.appendAsLeader(
-            context.buildBatch(context.log.endOffset().offset(), epoch, singletonList("raft")),
+            context.buildBatch(context.log.endOffset().offset(), epoch, List.of("raft")),
             epoch
         );
 
@@ -924,8 +921,8 @@ public class KafkaRaftClientTest {
 
         Record record = batch.iterator().next();
         assertEquals(electionTimestamp, record.timestamp());
-        RaftClientTestContext.verifyLeaderChangeMessage(localId, Arrays.asList(localId, otherNodeId),
-            Arrays.asList(otherNodeId, localId), record.key(), record.value());
+        RaftClientTestContext.verifyLeaderChangeMessage(localId, List.of(localId, otherNodeId),
+            List.of(otherNodeId, localId), record.key(), record.value());
     }
 
     @ParameterizedTest
@@ -973,8 +970,8 @@ public class KafkaRaftClientTest {
 
         Record record = batch.iterator().next();
         assertEquals(electionTimestamp, record.timestamp());
-        RaftClientTestContext.verifyLeaderChangeMessage(localId, Arrays.asList(localId, firstNodeId, secondNodeId),
-            Arrays.asList(voterId, localId), record.key(), record.value());
+        RaftClientTestContext.verifyLeaderChangeMessage(localId, List.of(localId, firstNodeId, secondNodeId),
+            List.of(voterId, localId), record.key(), record.value());
     }
 
     @ParameterizedTest
@@ -1128,7 +1125,7 @@ public class KafkaRaftClientTest {
             context.endEpochRequest(
                 epoch - 2,
                 otherNodeId,
-                Collections.singletonList(context.localReplicaKey())
+                List.of(context.localReplicaKey())
             )
         );
 
@@ -1168,7 +1165,7 @@ public class KafkaRaftClientTest {
 
         // One of the voters may have sent EndQuorumEpoch from an earlier epoch
         context.deliverRequest(
-            context.endEpochRequest(epoch - 2, voter2, Arrays.asList(context.localReplicaKey(), voter3))
+            context.endEpochRequest(epoch - 2, voter2, List.of(context.localReplicaKey(), voter3))
         );
 
         context.pollUntilResponse();
@@ -1200,7 +1197,7 @@ public class KafkaRaftClientTest {
             context.endEpochRequest(
                 epoch,
                 voter2,
-                Arrays.asList(context.localReplicaKey(), voter3)
+                List.of(context.localReplicaKey(), voter3)
             )
         );
 
@@ -1235,7 +1232,7 @@ public class KafkaRaftClientTest {
         assertEquals(OptionalInt.of(localId), context.currentLeader());
         int epoch = context.currentEpoch();
 
-        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
         context.client.schedulePreparedAppend();
         context.deliverRequest(context.beginEpochRequest(epoch + 1, otherNodeId));
         context.pollUntilResponse();
@@ -1268,7 +1265,7 @@ public class KafkaRaftClientTest {
         assertEquals(OptionalInt.of(localId), context.currentLeader());
         int epoch = context.currentEpoch();
 
-        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
         context.client.schedulePreparedAppend();
         context.deliverRequest(
             context.voteRequest(epoch + 1, otherNodeKey, epoch, context.log.endOffset().offset())
@@ -1302,7 +1299,7 @@ public class KafkaRaftClientTest {
         assertEquals(OptionalInt.of(localId), context.currentLeader());
         int epoch = context.currentEpoch();
 
-        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
         context.client.schedulePreparedAppend();
         context.deliverRequest(context.voteRequest(epoch + 1, otherNodeKey, epoch, 0L));
         context.pollUntilResponse();
@@ -1332,7 +1329,7 @@ public class KafkaRaftClientTest {
         assertEquals(1L, context.log.endOffset().offset());
 
         int epoch = context.currentEpoch();
-        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
         context.client.schedulePreparedAppend();
         assertTrue(context.messageQueue.wakeupRequested());
 
@@ -1368,7 +1365,7 @@ public class KafkaRaftClientTest {
         assertEquals(1L, context.log.endOffset().offset());
 
         int epoch = context.currentEpoch();
-        assertEquals(1L, context.client.prepareAppend(epoch, singletonList("a")));
+        assertEquals(1L, context.client.prepareAppend(epoch, List.of("a")));
         context.client.schedulePreparedAppend();
         assertTrue(context.messageQueue.wakeupRequested());
 
@@ -1377,7 +1374,7 @@ public class KafkaRaftClientTest {
         assertEquals(OptionalLong.of(lingerMs), context.messageQueue.lastPollTimeoutMs());
 
         context.time.sleep(lingerMs);
-        assertEquals(2L, context.client.prepareAppend(epoch, singletonList("b")));
+        assertEquals(2L, context.client.prepareAppend(epoch, List.of("b")));
         context.client.schedulePreparedAppend();
         assertTrue(context.messageQueue.wakeupRequested());
 
@@ -1402,7 +1399,7 @@ public class KafkaRaftClientTest {
             context.endEpochRequest(
                 leaderEpoch,
                 oldLeaderId,
-                Collections.singletonList(context.localReplicaKey())
+                List.of(context.localReplicaKey())
             )
         );
 
@@ -1433,7 +1430,7 @@ public class KafkaRaftClientTest {
             context.endEpochRequest(
                 leaderEpoch,
                 oldLeaderKey.id(),
-                Arrays.asList(preferredNextLeader, context.localReplicaKey())
+                List.of(preferredNextLeader, context.localReplicaKey())
             )
         );
 
@@ -1712,7 +1709,7 @@ public class KafkaRaftClientTest {
         context.assertSentFetchPartitionResponse(Errors.NONE, epoch, OptionalInt.of(localId));
         assertEquals(OptionalLong.of(1L), context.client.highWatermark());
 
-        List<String> records = Arrays.asList("a", "b", "c");
+        List<String> records = List.of("a", "b", "c");
         long offset = context.client.prepareAppend(epoch, records);
         context.client.schedulePreparedAppend();
         context.client.poll();
@@ -1741,9 +1738,9 @@ public class KafkaRaftClientTest {
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withUnknownLeader(5)
             .withRaftProtocol(raftProtocol)
-            .appendToLog(1, Arrays.asList("a", "b", "c"))
-            .appendToLog(3, Arrays.asList("d", "e", "f"))
-            .appendToLog(5, Arrays.asList("g", "h", "i"))
+            .appendToLog(1, List.of("a", "b", "c"))
+            .appendToLog(3, List.of("d", "e", "f"))
+            .appendToLog(5, List.of("g", "h", "i"))
             .build();
 
         // Start off as the leader
@@ -1934,7 +1931,7 @@ public class KafkaRaftClientTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
-            .appendToLog(lastEpoch, singletonList("foo"))
+            .appendToLog(lastEpoch, List.of("foo"))
             .withRaftProtocol(raftProtocol)
             .build();
 
@@ -1955,7 +1952,7 @@ public class KafkaRaftClientTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
-            .appendToLog(lastEpoch, singletonList("foo"))
+            .appendToLog(lastEpoch, List.of("foo"))
             .withRaftProtocol(raftProtocol)
             .build();
         context.assertElectedLeader(epoch, otherNodeId);
@@ -1981,7 +1978,7 @@ public class KafkaRaftClientTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
-            .appendToLog(lastEpoch, singletonList("foo"))
+            .appendToLog(lastEpoch, List.of("foo"))
             .withRaftProtocol(raftProtocol)
             .build();
         context.assertElectedLeader(epoch, otherNodeId);
@@ -2236,7 +2233,7 @@ public class KafkaRaftClientTest {
         context.assertFetchRequestData(retryToBootstrapServerFetchRequest, epoch, 0L, 0);
 
         // Deliver the delayed responses from the leader
-        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
+        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
         context.deliverResponse(
             toLeaderFetchRequest.correlationId(),
             toLeaderFetchRequest.destination(),
@@ -2246,7 +2243,7 @@ public class KafkaRaftClientTest {
         context.client.poll();
 
         // Deliver the same delayed responses from the bootstrap server and assume that it is the leader
-        records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
+        records = context.buildBatch(0L, 3, List.of("a", "b"));
         context.deliverResponse(
             retryToBootstrapServerFetchRequest.correlationId(),
             retryToBootstrapServerFetchRequest.destination(),
@@ -2612,22 +2609,22 @@ public class KafkaRaftClientTest {
         int epoch = context.currentEpoch();
 
         // valid cluster id is accepted
-        context.deliverRequest(context.endEpochRequest(epoch, localId, Collections.singletonList(otherNodeKey)));
+        context.deliverRequest(context.endEpochRequest(epoch, localId, List.of(otherNodeKey)));
         context.pollUntilResponse();
         context.assertSentEndQuorumEpochResponse(Errors.NONE, epoch, OptionalInt.of(localId));
 
         // null cluster id is accepted
-        context.deliverRequest(context.endEpochRequest(null, epoch, localId, Collections.singletonList(otherNodeKey)));
+        context.deliverRequest(context.endEpochRequest(null, epoch, localId, List.of(otherNodeKey)));
         context.pollUntilResponse();
         context.assertSentEndQuorumEpochResponse(Errors.NONE, epoch, OptionalInt.of(localId));
 
         // empty cluster id is rejected
-        context.deliverRequest(context.endEpochRequest("", epoch, localId, Collections.singletonList(otherNodeKey)));
+        context.deliverRequest(context.endEpochRequest("", epoch, localId, List.of(otherNodeKey)));
         context.pollUntilResponse();
         context.assertSentEndQuorumEpochResponse(Errors.INCONSISTENT_CLUSTER_ID);
 
         // invalid cluster id is rejected
-        context.deliverRequest(context.endEpochRequest("invalid-uuid", epoch, localId, Collections.singletonList(otherNodeKey)));
+        context.deliverRequest(context.endEpochRequest("invalid-uuid", epoch, localId, List.of(otherNodeKey)));
         context.pollUntilResponse();
         context.assertSentEndQuorumEpochResponse(Errors.INCONSISTENT_CLUSTER_ID);
     }
@@ -2752,7 +2749,7 @@ public class KafkaRaftClientTest {
 
         // Append some records that can fulfill the Fetch request
         String[] appendRecords = new String[]{"a", "b", "c"};
-        context.client.prepareAppend(epoch, Arrays.asList(appendRecords));
+        context.client.prepareAppend(epoch, List.of(appendRecords));
         context.client.schedulePreparedAppend();
         context.client.poll();
 
@@ -2821,7 +2818,7 @@ public class KafkaRaftClientTest {
         assertTrue(context.client.quorum().isProspective());
 
         // The fetch response from the old leader returns, but it should be ignored
-        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
+        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
         context.deliverResponse(
             fetchRequest.correlationId(),
             fetchRequest.destination(),
@@ -2861,7 +2858,7 @@ public class KafkaRaftClientTest {
         context.assertElectedLeader(epoch + 1, voter3);
 
         // The fetch response from the old leader returns, but it should be ignored
-        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
+        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
         FetchResponseData response = context.fetchResponse(epoch, voter2, records, 0L, Errors.NONE);
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -3165,7 +3162,7 @@ public class KafkaRaftClientTest {
         context.assertSentFetchPartitionResponse(1L, epoch);
 
         // Append some records, so that the close follower will be able to advance further.
-        context.client.prepareAppend(epoch, Arrays.asList("foo", "bar"));
+        context.client.prepareAppend(epoch, List.of("foo", "bar"));
         context.client.schedulePreparedAppend();
         context.client.poll();
 
@@ -3187,7 +3184,7 @@ public class KafkaRaftClientTest {
             epoch,
             Set.of(closeFollower.id(), laggingFollower.id()),
             Optional.of(
-                Arrays.asList(
+                List.of(
                     replicaKey(closeFollower.id(), false),
                     replicaKey(laggingFollower.id(), false)
                 )
@@ -3246,7 +3243,7 @@ public class KafkaRaftClientTest {
         // Describe quorum response will not include directory ids
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        List<ReplicaState> expectedVoterStates = Arrays.asList(
+        List<ReplicaState> expectedVoterStates = List.of(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(ReplicaKey.NO_DIRECTORY_ID)
@@ -3259,7 +3256,7 @@ public class KafkaRaftClientTest {
                 .setLogEndOffset(-1L)
                 .setLastFetchTimestamp(-1)
                 .setLastCaughtUpTimestamp(-1));
-        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, List.of());
     }
 
     @ParameterizedTest
@@ -3298,7 +3295,7 @@ public class KafkaRaftClientTest {
         // Describe quorum response before any fetches made
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        List<ReplicaState> expectedVoterStates = Arrays.asList(
+        List<ReplicaState> expectedVoterStates = List.of(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(withBootstrapSnapshot ? context.localReplicaKey().directoryId().get() : ReplicaKey.NO_DIRECTORY_ID)
@@ -3317,7 +3314,7 @@ public class KafkaRaftClientTest {
                 .setLogEndOffset(-1L)
                 .setLastFetchTimestamp(-1)
                 .setLastCaughtUpTimestamp(-1));
-        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, List.of());
 
         context.time.sleep(100);
         long fetchOffset = withBootstrapSnapshot ? 3L : 1L;
@@ -3327,7 +3324,7 @@ public class KafkaRaftClientTest {
         long expectedHW = fetchOffset;
         context.assertSentFetchPartitionResponse(expectedHW, epoch);
 
-        List<String> records = Arrays.asList("foo", "bar");
+        List<String> records = List.of("foo", "bar");
         long nextFetchOffset = fetchOffset + records.size();
         context.client.prepareAppend(epoch, records);
         context.client.schedulePreparedAppend();
@@ -3345,7 +3342,7 @@ public class KafkaRaftClientTest {
             .setLogEndOffset(fetchOffset)
             .setLastFetchTimestamp(followerFetchTime1)
             .setLastCaughtUpTimestamp(followerFetchTime1);
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
 
         // After follower2 catches up to leader
         context.time.sleep(100);
@@ -3366,13 +3363,13 @@ public class KafkaRaftClientTest {
             .setLogEndOffset(nextFetchOffset)
             .setLastFetchTimestamp(followerFetchTime2)
             .setLastCaughtUpTimestamp(followerFetchTime2);
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
 
         // Describe quorum returns error if leader loses leadership
         context.time.sleep(context.checkQuorumTimeoutMs);
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        context.assertSentDescribeQuorumResponse(Errors.NOT_LEADER_OR_FOLLOWER, 0, 0, 0, Collections.emptyList(), Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(Errors.NOT_LEADER_OR_FOLLOWER, 0, 0, 0, List.of(), List.of());
     }
 
     @ParameterizedTest
@@ -3424,7 +3421,7 @@ public class KafkaRaftClientTest {
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
 
-        List<ReplicaState> expectedVoterStates = Arrays.asList(
+        List<ReplicaState> expectedVoterStates = List.of(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(withBootstrapSnapshot ? localDirectoryId : ReplicaKey.NO_DIRECTORY_ID)
@@ -3439,7 +3436,7 @@ public class KafkaRaftClientTest {
                 .setLogEndOffset(fetchOffset)
                 .setLastFetchTimestamp(followerFetchTime)
                 .setLastCaughtUpTimestamp(followerFetchTime));
-        List<ReplicaState> expectedObserverStates = singletonList(
+        List<ReplicaState> expectedObserverStates = List.of(
             new ReplicaState()
                 .setReplicaId(observer.id())
                 .setReplicaDirectoryId(observerDirectoryId)
@@ -3470,7 +3467,7 @@ public class KafkaRaftClientTest {
 
         // Observer falls behind
         context.time.sleep(100);
-        List<String> records = Arrays.asList("foo", "bar");
+        List<String> records = List.of("foo", "bar");
         context.client.prepareAppend(epoch, records);
         context.client.schedulePreparedAppend();
         context.client.poll();
@@ -3504,7 +3501,7 @@ public class KafkaRaftClientTest {
             .setLastCaughtUpTimestamp(context.time.milliseconds());
         expectedVoterStates.get(1)
             .setLastFetchTimestamp(followerFetchTime);
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
 
         // No-op for negative node id
         context.deliverRequest(context.fetchRequest(epoch, ReplicaKey.of(-1, ReplicaKey.NO_DIRECTORY_ID), 0L, 0, 0));
@@ -3516,7 +3513,7 @@ public class KafkaRaftClientTest {
         expectedVoterStates.get(0)
             .setLastFetchTimestamp(context.time.milliseconds())
             .setLastCaughtUpTimestamp(context.time.milliseconds());
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
     }
 
     @ParameterizedTest
@@ -3546,7 +3543,7 @@ public class KafkaRaftClientTest {
 
         // Update HW to non-initial value
         context.time.sleep(100);
-        List<String> batch = Arrays.asList("foo", "bar");
+        List<String> batch = List.of("foo", "bar");
         context.client.prepareAppend(epoch, batch);
         context.client.schedulePreparedAppend();
         context.client.poll();
@@ -3560,7 +3557,7 @@ public class KafkaRaftClientTest {
         context.time.sleep(100);
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
-        List<ReplicaState> expectedVoterStates = Arrays.asList(
+        List<ReplicaState> expectedVoterStates = List.of(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(withBootstrapSnapshot ? local.directoryId().get() : ReplicaKey.NO_DIRECTORY_ID)
@@ -3573,7 +3570,7 @@ public class KafkaRaftClientTest {
                 .setLogEndOffset(fetchOffset)
                 .setLastFetchTimestamp(followerFetchTime)
                 .setLastCaughtUpTimestamp(followerFetchTime));
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
 
         // Follower crashes and disk is lost. It fetches an earlier offset to rebuild state.
         // The leader will report an error in the logs, but will not let the high watermark rewind
@@ -3592,7 +3589,7 @@ public class KafkaRaftClientTest {
         expectedVoterStates.get(1)
             .setLogEndOffset(fetchOffset - batch.size())
             .setLastFetchTimestamp(followerFetchTime);
-        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, expectedHW, expectedVoterStates, List.of());
     }
 
     @ParameterizedTest
@@ -3618,7 +3615,7 @@ public class KafkaRaftClientTest {
         context.deliverRequest(context.describeQuorumRequest());
         context.pollUntilResponse();
         boolean reconfigSupported = raftProtocol.isReconfigSupported();
-        List<ReplicaState> expectedVoterStates = Arrays.asList(
+        List<ReplicaState> expectedVoterStates = List.of(
             new ReplicaState()
                 .setReplicaId(localId)
                 .setReplicaDirectoryId(reconfigSupported ? local.directoryId().get() : ReplicaKey.NO_DIRECTORY_ID)
@@ -3637,7 +3634,7 @@ public class KafkaRaftClientTest {
                 .setLogEndOffset(-1L)
                 .setLastFetchTimestamp(-1)
                 .setLastCaughtUpTimestamp(-1));
-        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, Collections.emptyList());
+        context.assertSentDescribeQuorumResponse(localId, epoch, -1L, expectedVoterStates, List.of());
     }
 
 
@@ -3737,7 +3734,7 @@ public class KafkaRaftClientTest {
     @EnumSource(value = RaftProtocol.class)
     public void testGracefulShutdownSingleMemberQuorum(RaftProtocol raftProtocol) throws IOException {
         int localId = randomReplicaId();
-        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Collections.singleton(localId))
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Set.of(localId))
             .withRaftProtocol(raftProtocol)
             .build();
 
@@ -3768,7 +3765,7 @@ public class KafkaRaftClientTest {
         context.pollUntilRequest();
 
         RaftRequest.Outbound fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0);
-        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
+        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
         FetchResponseData response = context.fetchResponse(epoch, otherNodeId, records, 0L, Errors.NONE);
         context.deliverResponse(
             fetchQuorumRequest.correlationId(),
@@ -3799,7 +3796,7 @@ public class KafkaRaftClientTest {
         context.pollUntilRequest();
 
         RaftRequest.Outbound fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0);
-        Records records = context.buildBatch(0L, 3, Arrays.asList("a", "b"));
+        Records records = context.buildBatch(0L, 3, List.of("a", "b"));
         FetchResponseData response = context.fetchResponse(epoch, otherNodeId, records, 0L, Errors.NONE);
         context.deliverResponse(
             fetchQuorumRequest.correlationId(),
@@ -3848,7 +3845,7 @@ public class KafkaRaftClientTest {
 
         // Receive some records in the next poll, but do not advance high watermark
         context.pollUntilRequest();
-        Records records = context.buildBatch(0L, epoch, Arrays.asList("a", "b"));
+        Records records = context.buildBatch(0L, epoch, List.of("a", "b"));
         fetchQuorumRequest = context.assertSentFetchRequest(epoch, 0L, 0);
         fetchResponse = context.fetchResponse(epoch, otherNodeId, records, 0L, Errors.NONE);
         context.deliverResponse(
@@ -3920,7 +3917,7 @@ public class KafkaRaftClientTest {
     @EnumSource(value = RaftProtocol.class)
     public void testLeaderAppendSingleMemberQuorum(RaftProtocol raftProtocol) throws Exception {
         int localId = randomReplicaId();
-        Set<Integer> voters = Collections.singleton(localId);
+        Set<Integer> voters = Set.of(localId);
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withRaftProtocol(raftProtocol)
@@ -3939,7 +3936,7 @@ public class KafkaRaftClientTest {
         context.client.poll();
         assertEquals(OptionalLong.of(1L), context.client.highWatermark());
 
-        context.client.prepareAppend(context.currentEpoch(), Arrays.asList(appendRecords));
+        context.client.prepareAppend(context.currentEpoch(), List.of(appendRecords));
         context.client.schedulePreparedAppend();
 
         // Then poll the appended data with leader change record
@@ -3980,8 +3977,8 @@ public class KafkaRaftClientTest {
 
         Record record = readRecords.get(0);
         assertEquals(now, record.timestamp());
-        RaftClientTestContext.verifyLeaderChangeMessage(localId, Collections.singletonList(localId),
-            Collections.singletonList(localId), record.key(), record.value());
+        RaftClientTestContext.verifyLeaderChangeMessage(localId, List.of(localId),
+            List.of(localId), record.key(), record.value());
 
         MutableRecordBatch batch = batches.get(1);
         assertEquals(1, batch.partitionLeaderEpoch());
@@ -4004,8 +4001,8 @@ public class KafkaRaftClientTest {
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .withElectedLeader(epoch, otherNodeId)
-            .appendToLog(lastEpoch, Arrays.asList("foo", "bar"))
-            .appendToLog(lastEpoch, singletonList("baz"))
+            .appendToLog(lastEpoch, List.of("foo", "bar"))
+            .appendToLog(lastEpoch, List.of("baz"))
             .withRaftProtocol(raftProtocol)
             .build();
 
@@ -4035,7 +4032,7 @@ public class KafkaRaftClientTest {
     public void testMetrics(RaftProtocol raftProtocol) throws Exception {
         int localId = randomReplicaId();
         int epoch = 1;
-        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Collections.singleton(localId))
+        RaftClientTestContext context = new RaftClientTestContext.Builder(localId, Set.of(localId))
             .withRaftProtocol(raftProtocol)
             .build();
         context.pollUntil(() -> context.log.endOffset().offset() == 1L);
@@ -4067,7 +4064,7 @@ public class KafkaRaftClientTest {
         assertEquals((double) 1L, getMetric(context.metrics, "log-end-offset").metricValue());
         assertEquals((double) epoch, getMetric(context.metrics, "log-end-epoch").metricValue());
 
-        context.client.prepareAppend(epoch, Arrays.asList("a", "b", "c"));
+        context.client.prepareAppend(epoch, List.of("a", "b", "c"));
         context.client.schedulePreparedAppend();
         context.client.poll();
 
@@ -4244,11 +4241,11 @@ public class KafkaRaftClientTest {
         int epoch = 5;
         Set<Integer> voters = Set.of(localId, otherNodeKey.id());
 
-        List<String> batch1 = Arrays.asList("1", "2", "3");
-        List<String> batch2 = Arrays.asList("4", "5", "6");
-        List<String> batch3 = Arrays.asList("7", "8", "9");
+        List<String> batch1 = List.of("1", "2", "3");
+        List<String> batch2 = List.of("4", "5", "6");
+        List<String> batch3 = List.of("7", "8", "9");
 
-        List<List<String>> expectedBatches = Arrays.asList(batch1, batch2, batch3);
+        List<List<String>> expectedBatches = List.of(batch1, batch2, batch3);
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .appendToLog(1, batch1)
             .appendToLog(1, batch2)
@@ -4311,9 +4308,9 @@ public class KafkaRaftClientTest {
         int epoch = 5;
         Set<Integer> voters = Set.of(localId, otherNodeKey.id());
 
-        List<String> batch1 = Arrays.asList("1", "2", "3");
-        List<String> batch2 = Arrays.asList("4", "5", "6");
-        List<String> batch3 = Arrays.asList("7", "8", "9");
+        List<String> batch1 = List.of("1", "2", "3");
+        List<String> batch2 = List.of("4", "5", "6");
+        List<String> batch3 = List.of("7", "8", "9");
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .appendToLog(1, batch1)
@@ -4354,9 +4351,9 @@ public class KafkaRaftClientTest {
         int epoch = 5;
         Set<Integer> voters = Set.of(localId, otherNodeId);
 
-        List<String> batch1 = Arrays.asList("1", "2", "3");
-        List<String> batch2 = Arrays.asList("4", "5", "6");
-        List<String> batch3 = Arrays.asList("7", "8", "9");
+        List<String> batch1 = List.of("1", "2", "3");
+        List<String> batch2 = List.of("4", "5", "6");
+        List<String> batch3 = List.of("7", "8", "9");
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
             .appendToLog(1, batch1)
@@ -4381,7 +4378,7 @@ public class KafkaRaftClientTest {
         context.client.unregister(secondListener);
 
         // Write to the log and show that the default listener gets updated...
-        assertEquals(10L, context.client.prepareAppend(epoch, singletonList("a")));
+        assertEquals(10L, context.client.prepareAppend(epoch, List.of("a")));
         context.client.schedulePreparedAppend();
         context.client.poll();
         context.advanceLocalLeaderHighWatermarkToLogEndOffset();
@@ -4411,7 +4408,7 @@ public class KafkaRaftClientTest {
         context.assertFetchRequestData(fetchRequest, epoch, 0L, 0);
 
         // The response does not advance the high watermark
-        List<String> records1 = Arrays.asList("a", "b", "c");
+        List<String> records1 = List.of("a", "b", "c");
         MemoryRecords batch1 = context.buildBatch(0L, 3, records1);
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -4432,7 +4429,7 @@ public class KafkaRaftClientTest {
         context.assertFetchRequestData(fetchRequest, epoch, 3L, 3);
 
         // The high watermark advances to include the first batch we fetched
-        List<String> records2 = Arrays.asList("d", "e", "f");
+        List<String> records2 = List.of("d", "e", "f");
         MemoryRecords batch2 = context.buildBatch(3L, 3, records2);
         context.deliverResponse(
             fetchRequest.correlationId(),
@@ -4460,9 +4457,9 @@ public class KafkaRaftClientTest {
         Set<Integer> voters = Set.of(localId, otherNodeKey.id());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(2, Arrays.asList("a", "b", "c"))
-            .appendToLog(4, Arrays.asList("d", "e", "f"))
-            .appendToLog(4, Arrays.asList("g", "h", "i"))
+            .appendToLog(2, List.of("a", "b", "c"))
+            .appendToLog(4, List.of("d", "e", "f"))
+            .appendToLog(4, List.of("g", "h", "i"))
             .withUnknownLeader(epoch - 1)
             .withRaftProtocol(raftProtocol)
             .build();
@@ -4507,9 +4504,9 @@ public class KafkaRaftClientTest {
         Set<Integer> voters = Set.of(localId, otherNodeKey.id());
 
         RaftClientTestContext context = new RaftClientTestContext.Builder(localId, voters)
-            .appendToLog(2, Arrays.asList("a", "b", "c"))
-            .appendToLog(4, Arrays.asList("d", "e", "f"))
-            .appendToLog(4, Arrays.asList("g", "h", "i"))
+            .appendToLog(2, List.of("a", "b", "c"))
+            .appendToLog(4, List.of("d", "e", "f"))
+            .appendToLog(4, List.of("g", "h", "i"))
             .withUnknownLeader(epoch - 1)
             .withRaftProtocol(raftProtocol)
             .build();
@@ -4686,7 +4683,7 @@ public class KafkaRaftClientTest {
         assertEquals(leaderId, fetchRequest2.destination().id());
         context.assertFetchRequestData(fetchRequest2, leaderEpoch, 0L, 0);
 
-        List<String> records = Arrays.asList("a", "b", "c");
+        List<String> records = List.of("a", "b", "c");
         MemoryRecords batch1 = context.buildBatch(0L, 3, records);
         context.deliverResponse(
             fetchRequest2.correlationId(),
